Cleaned code up and updated README.md